<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- This is a ROS package file, intended to allow this library to be built
     side-by-side to ROS packages in a catkin/ament environment.
-->
<package format="3">
  <name>mola_state_estimation_smoother</name>
  <version>1.11.1</version>
  <description>SE(3) pose and twist path data fusion estimator</description>

  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>
  <license file="LICENSE">GPLv3</license>

  <url type="website">https://github.com/MOLAorg/mola_state_estimation</url>


  <depend>mola_common</depend>
  <depend>mola_kernel</depend>
  <depend>mola_imu_preintegration</depend>

  <depend>mrpt_libobs</depend>

  <!-- GTSAM and its Boost deps -->
  <depend>gtsam</depend>
  <build_depend>libboost-serialization-dev</build_depend>
  <build_depend>libboost-system-dev</build_depend>
  <build_depend>libboost-filesystem-dev</build_depend>
  <build_depend>libboost-thread-dev</build_depend>
  <build_depend>libboost-program-options-dev</build_depend>
  <build_depend>libboost-date-time-dev</build_depend>
  <build_depend>libboost-timer-dev</build_depend>
  <build_depend>libboost-chrono-dev</build_depend>
  <build_depend>libboost-regex-dev</build_depend>


  <doc_depend>doxygen</doc_depend>

  <!-- Minimum entries to release non-catkin pkgs: -->
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
  <!-- End -->

</package>
